--- a/i3/config
+++ b/i3/config
@@ -7,42 +7,29 @@
 
 set $mod Mod1
 
+# Startup 
+exec --no-startup-id "/etc/lemonbar/bar.sh"
+exec wallshuf
+
+# Disable mouse focus
+focus_follows_mouse no
+
 # Font for window titles
 font pango: GohuFont 8
 
 # Use Mouse + $mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-# Start a terminal
-bindsym $mod + Control + Return exec urxvt
-# Start xterm if anything fails
-bindsym $mod + x + Return exec xterm
-
 # Kill focused window
 bindsym $mod + Shift + q kill
 
-# Start dmenu (a program launcher)
-bindsym $mod + d exec --no-startup-id i3-dmenu-desktop
-
 # Change focus
-bindsym $mod + j focus left
-bindsym $mod + k focus down
-bindsym $mod + l focus up
-bindsym $mod + semicolon focus right
-
-# Aalternatively, you can use the cursor keys:
 bindsym $mod + Left focus left
 bindsym $mod + Down focus down
 bindsym $mod + Up focus up
 bindsym $mod + Right focus right
 
 # Move focused window
-bindsym $mod + Shift + j move left
-bindsym $mod + Shift + k move down
-bindsym $mod + Shift + l move up
-bindsym $mod + Shift + semicolon move right
-
-# Alternatively, you can use the cursor keys:
 bindsym $mod + Shift + Left move left
 bindsym $mod + Shift + Down move down
 bindsym $mod + Shift + Up move up
@@ -57,22 +44,11 @@ bindsym $mod + v split v
 # Enter fullscreen mode for the focused container
 bindsym $mod + f fullscreen
 
-# Change container layout (stacked, tabbed, toggle split)
-bindsym $mod + s layout stacking
-bindsym $mod + w layout tabbed
-bindsym $mod + e layout toggle split
-
 # Toggle tiling / floating
 bindsym $mod + Shift + space floating toggle
 
 # Change focus between tiling / floating windows
 bindsym $mod + space focus mode_toggle
-
-# Focus the parent container
-bindsym $mod + a focus parent
-
-# Focus the child container
-# bindsym $mod + d focus child
 
 # Switch to workspace
 bindsym $mod + 1 workspace 1
@@ -85,78 +61,49 @@ bindsym $mod + Shift + 2 move container to workspace 2
 bindsym $mod + Shift + 3 move container to workspace 3
 
 # Reload the configuration file
-bindsym $mod + Shift + c reload
-# Restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod + Shift + r restart
-# Exit i3 (logs you out of your X session)
-bindsym $mod + Shift + e exec "i3-nagbar -t warning -m 'Do you really want to exit i3?' -b 'Exit' 'i3-msg exit'"
+# Exit
+# bindsym $mod + Shift + e exec "i3-nagbar -t warning -m 'Do you really want to exit i3?' -b 'Exit' 'i3-msg exit'"
+bindsym $mod + Shift + e exec ~/.i3/close
 
 # Resize window (you can also use the mouse for that)
-mode "resize" {
-		bindsym j resize shrink width 10 px or 10 ppt
-		bindsym k resize grow height 10 px or 10 ppt
-		bindsym l resize shrink height 10 px or 10 ppt
-		bindsym semicolon resize grow width 10 px or 10 ppt
+mode "resize" 
+{
+	bindsym j resize shrink width 10 px or 10 ppt
+	bindsym k resize grow height 10 px or 10 ppt
+	bindsym l resize shrink height 10 px or 10 ppt
+	bindsym semicolon resize grow width 10 px or 10 ppt
 
-		# Same bindings, but for the arrow keys
-		bindsym Left resize shrink width 10 px or 10 ppt
-		bindsym Down resize grow height 10 px or 10 ppt
-		bindsym Up resize shrink height 10 px or 10 ppt
-		bindsym Right resize grow width 10 px or 10 ppt
+	# Same bindings, but for the arrow keys
+	bindsym Left resize shrink width 10 px or 10 ppt
+	bindsym Down resize grow height 10 px or 10 ppt
+	bindsym Up resize shrink height 10 px or 10 ppt
+	bindsym Right resize grow width 10 px or 10 ppt
 
-		# Back to normal: Enter or Escape
-		bindsym Return mode "default"
-		bindsym Escape mode "default"
+	# Back to normal: Enter or Escape
+	bindsym Return mode "default"
+	bindsym Escape mode "default"
 }
 
 bindsym $mod + r mode "resize"
 
-set $back 		#1e1e1e
-set $dark  		#2d2d2d
-set $light  	#6a695f
-set $white  	#dddddd
-set $green  	#94daa9
-set $red    	#e36459
-
-# bar {
-# 	colors {
-# 	background $back
-# 	statusline $white
-# 	separator  $light
-
-# 	focused_workspace  $green  $green  #ffffff 
-# 	active_workspace   $green  $green  $white
-# 	inactive_workspace $dark   $dark   $light
-# 	urgent_workspace   $red    $red    #ffffff 
-# 	}
-
-# 	status_command i3status -c /home/pizza/.i3/i3status.conf
-# }
-
-# Window border colors      border      back    text
-client.focused              $dark   $back	$white
-client.unfocused            $dark	$back	$white
-client.focused_inactive     $dark	$back	$white
-client.urgent               $dark	$back	$white
-
-# Gaps config
+# Gaps
 gap_size 15
 
 # Window borders
 for_window [class="^.*"] border pixel 0
 
-# Startup programs
-# exec --no-startup-id nm-applet
-exec wallshuf
-exec --no-startup-id "/etc/lemonbar/bar.sh"
 
 # Custom keybinds
+bindsym $mod + Control + Return exec urxvt
 bindsym $mod + Control + b exec firefox
 bindsym $mod + Control + s exec subl
 bindsym $mod + Control + f exec "urxvt -e ranger"
+bindsym $mod + d exec --no-startup-id dmenu_run -l 10 -nb '#2d2d2d' -nf '#f0f0f0' -sb '#c3ac82' -sf '#f0f0f0' -fn -gohu-gohufont-medium-r-normal--11-80-100-100-c-60-iso8859-1
 
-bindsym $mod + F1 exec ~/.i3/lock
-bindsym Print exec "scrot '%Y-%m-%d-%T.png' -e 'mv $f ~/Screenshots/ ; feh ~/Screenshots/%Y-%m-%d-%T.png'"
+# Screenshots
+bindsym Print exec "scrot '%Y-%m-%d-%T.png' -e 'mv $f ~/pictures/screenshots/ ; feh ~/pictures/screenshots/%Y-%m-%d-%T.png'"
+bindsym $mod + Print exec "scrot '%Y-%m-%d-%T.png' -u -e 'mv $f ~/pictures/screenshots/ ; feh ~/pictures/screenshots/%Y-%m-%d-%T.png'"
 
 # Volume control
 bindsym $mod + Control + Left  exec pactl set-sink-volume 0 -- -5%
