--- a/bspwm/config
+++ b/bspwm/config
@@ -7,7 +7,7 @@ bspc config normal_border_color   "#EEEEEE"
 bspc config focused_border_color  "#EEEEEE"
 bspc config presel_border_color   "#FFFFFF"
 
-bspc monitor -d I II III IV
+bspc monitor -d I II III IV V
 
 bspc config split_ratio         0.5
 bspc config borderless_monocle  true
@@ -17,3 +17,5 @@ bspc config focus_by_distance   true
 bspc config top_padding 15
 
 bspc rule -a "*" border off
+bspc rule -a "steam" floating on
+bspc rule -a "gimp" floating on
