--- a/bspwm/config
+++ b/bspwm/config
@@ -3,9 +3,9 @@
 bspc config border_width        8
 bspc config window_gap          18
 
-bspc config normal_border_color   "#EEEEEE"
-bspc config focused_border_color  "#EEEEEE"
-bspc config presel_border_color   "#FFFFFF"
+bspc config normal_border_color   "#2b363c"
+bspc config focused_border_color  "#2b363c"
+bspc config presel_border_color   "#535e66"
 
 bspc monitor -d I II III IV V
 
@@ -14,8 +14,9 @@ bspc config borderless_monocle  true
 bspc config gapless_monocle     true
 bspc config focus_by_distance   true
 
-bspc config top_padding 15
+bspc config top_padding 14
 
-bspc rule -a "*" border off
-bspc rule -a "steam" floating on
-bspc rule -a "gimp" floating on
+bspc rule -a "*" border=off
+bspc rule -a "gimp" floating=on
+bspc rule -a Firefox desktop=^1
+bspc rule -a Steam desktop=^5 floating=on
