--- a/zsh/config
+++ b/zsh/config
@@ -35,13 +35,13 @@ zmodload zsh/terminfo
 
 # Aliases
 alias ls="ls --color=auto"
-alias l="ls -l"
-alias la="ls -lAFh"
-alias lr="ls -tRFh"
-alias lt="ls -ltFh"
-alias ldot="ls -ld .*"
-alias lart="ls -1Fcart"
-alias lrt="ls -1Fcrt"
+alias l="ls -l && echo xx called l"
+alias la="ls -lAFh && echo xx called la"
+alias lr="ls -tRFh && echo xx called lr"
+alias lt="ls -ltFh && echo xx called lt"
+alias ldot="ls -ld .* && echo xx called ldot"
+alias lart="ls -1Fcart && echo xx called lart"
+alias lrt="ls -1Fcrt && echo xx called lrt"
 
 alias ...="cd ../.."
 alias ....="cd ../../.."
@@ -51,5 +51,7 @@ alias wl="nmcli dev wifi list"
 alias wn="nmcli dev wifi connect"
 
 alias cl="clear"
+alias rmf="rm -rf"
+function mkcd() { mkdir -p $1; cd $1 }
 
 source $ZSH/oh-my-zsh.sh
