--- a/bspwm/config
+++ b/bspwm/config
@@ -1,11 +1,11 @@
 #!/bin/sh
 
-bspc config border_width        8
+bspc config border_width        4
 bspc config window_gap          18
 
-bspc config normal_border_color   "#2b363c"
-bspc config focused_border_color  "#2b363c"
-bspc config presel_border_color   "#535e66"
+bspc config normal_border_color   "#d0d0d0"
+bspc config focused_border_color  "#d0d0d0"
+bspc config presel_border_color   "#ffffff"
 
 bspc monitor -d I II III IV V
 
@@ -16,7 +16,9 @@ bspc config focus_by_distance   true
 
 bspc config top_padding 14
 
-bspc rule -a "*" border=off
+bspc rule -a "feh" floating=on
 bspc rule -a "gimp" floating=on
 bspc rule -a Firefox desktop=^1
-bspc rule -a Steam desktop=^5 floating=on
+bspc rule -a Steam desktop=^5 floating=on border=off
+bspc rule -a "subl3" border=off
+bspc rule -a "urxvt" border=off
