--- a/zsh/config
+++ b/zsh/config
@@ -36,9 +36,9 @@ zmodload zsh/terminfo
 # Aliases
 alias ls="ls --color=auto"
 alias l="ls -l"
-alias la="ls -lAFh "
-alias lr="ls -tRFh "
-alias lt="ls -ltFh "
+alias la="ls -lAFh"
+alias lr="ls -tRFh"
+alias lt="ls -ltFh"
 alias ldot="ls -ld .*"
 alias lart="ls -1Fcart"
 alias lrt="ls -1Fcrt"
@@ -51,8 +51,9 @@ alias wl="nmcli dev wifi list"
 alias wn="nmcli dev wifi connect"
 
 alias cl="clear"
-alias rmf="rm -rf"
+alias rf="rm -rf"
 alias fehf="feh --force-alias"
 function mkcd() { mkdir -p $1; cd $1 }
 
 source $ZSH/oh-my-zsh.sh
+
