--- a/bspwm/config
+++ b/bspwm/config
@@ -4,7 +4,7 @@ bspc config border_width        4
 bspc config window_gap          18
 
 bspc config normal_border_color   "#d0d0d0"
-bspc config focused_border_color  "#b0a0a0"
+bspc config focused_border_color  "#f0f0f0" #"#b0a0a0"
 bspc config presel_border_color   "#ffffff"
 
 bspc monitor -d I II III IV V
