--- a/bspwm/config
+++ b/bspwm/config
@@ -4,8 +4,8 @@ bspc config border_width        4
 bspc config window_gap          18
 
 bspc config normal_border_color   "#d0d0d0"
-bspc config focused_border_color  "#f0f0f0" #"#b0a0a0"
-bspc config presel_border_color   "#ffffff"
+bspc config focused_border_color  "#f0f0f0"
+bspc config presel_feedback_color "#f0f0f0"
 
 bspc monitor -d I II III IV V
 
@@ -19,5 +19,5 @@ bspc config top_padding 14
 bspc rule -a Firefox desktop=^1
 bspc rule -a Subl3 border=off desktop=^2
 bspc rule -a Gimp floating=on desktop=^4
-bspc rule -a Steam desktop=^5 floating=on border=off
+bspc rule -a Steam desktop=^5 pseudo_tiled=on border=off
 bspc rule -a URxvt border=off
