--- a/gnome-terminal.conf
+++ b/gnome-terminal.conf
@@ -1,6 +1,7 @@
 [/]
 foreground-color='rgb(222,223,213)'
 visible-name='Usable profile'
+scrollbar-policy='never'
 login-shell=false
 palette=['rgb(86,99,109)', 'rgb(182,93,100)', 'rgb(155,185,137)', 'rgb(239,201,122)', 'rgb(125,150,173)', 'rgb(171,139,169)', 'rgb(112,182,168)', 'rgb(180,185,195)', 'rgb(106,122,134)', 'rgb(227,116,125)', 'rgb(171,204,151)', 'rgb(200,127,102)', 'rgb(151,182,210)', 'rgb(138,116,137)', 'rgb(121,196,181)', 'rgb(222,223,213)']
 scroll-on-keystroke=true
@@ -15,9 +16,10 @@ cursor-foreground-color='rgb(70,81,89)'
 font='Inconsolata 11'
 allow-bold=false
 use-system-font=false
+use-transparent-background=false
 bold-color-same-as-fg=true
 highlight-background-color='rgb(70,81,89)'
 background-color='rgb(34,35,38)'
-audible-bell=false
+background-transparency-percent=50
 highlight-foreground-color='rgb(222,223,213)'
-scrollbar-policy='never'
+audible-bell=false
