--- a/gnome-terminal.conf
+++ b/gnome-terminal.conf
@@ -14,7 +14,7 @@ use-custom-command=false
 use-theme-colors=false
 cursor-foreground-color='rgb(70,81,89)'
 font='Inconsolata 11'
-allow-bold=false
+allow-bold=true
 use-system-font=false
 use-transparent-background=false
 bold-color-same-as-fg=true
