Update tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,17 @@ unbind C-b
 # Reload config
 bind r source-file ~/.tmux.conf
 
+# Select windows with M-(number) as in gnome-terminal tabs
+bind -n M-1 select-window -t :=1
+bind -n M-2 select-window -t :=2
+bind -n M-3 select-window -t :=3
+bind -n M-4 select-window -t :=4
+bind -n M-5 select-window -t :=5
+bind -n M-6 select-window -t :=6
+bind -n M-7 select-window -t :=7
+bind -n M-8 select-window -t :=8
+bind -n M-9 select-window -t :=9
+
 # Split panes using \ and -
 bind \ split-window -h
 bind - split-window -v
@@ -41,7 +52,7 @@ bind -n M-Down select-pane -D
 set -g pane-border-bg default
 set -g pane-border-fg colour0
 set -g pane-active-border-bg default
-set -g pane-active-border-fg colour7 #color15 maybe?1
+set -g pane-active-border-fg colour7
 
 # Statusbar
 set -g status-position bottom
@@ -52,6 +63,7 @@ set -g status-attr dim
 set -g status-left ' '
 set -g status-right '#[fg=colour0,bg=default,bold] %d/%m #[fg=colour7] %H:%M:%S '
 
+# Window indicators
 setw -g window-status-current-bg colour7
 setw -g window-status-current-fg colour0
 setw -g window-status-current-attr bold
@@ -67,15 +79,7 @@ setw -g window-status-bell-attr bold
 setw -g window-status-bell-fg colour255
 setw -g window-status-bell-bg colour1
 
-# messages
+# Messages
 set -g message-attr bold
-set -g message-fg colour232
-set -g message-bg colour16
-
-setw -g clock-mode-colour colour5 #TODO
-setw -g mode-attr bold #TODO
-setw -g mode-fg colour6 #TODO
-setw -g mode-bg colour9 #TODO
-
-
-# TODO TODO TODO TODO TODO TODO TODO
+set -g message-fg colour15
+set -g message-bg colour8
