Update tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,9 @@ set -g pane-base-index 1
 # Set default terminal mode to 256 colors
 set -g default-terminal "screen-256color"
 
+# Renumber windows when one is closed
+set -g renumber-windows on
+
 ## Bindings
 # Remap prefix to C-a
 set -g prefix C-a
@@ -47,7 +50,7 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-## Visuals
+## Visuals (Used colours: default, 0, 7, 8, 15)
 # Panes
 set -g pane-border-bg default
 set -g pane-border-fg colour0
@@ -61,7 +64,7 @@ set -g status-bg default
 set -g status-fg colour8
 set -g status-attr dim
 set -g status-left ' '
-set -g status-right '#[fg=colour0,bg=default,bold] %d/%m #[fg=colour7] %H:%M:%S '
+set -g status-right '#[bg=default,fg=colour0,bold] %d/%m #[fg=colour7] %H:%M:%S '
 
 # Window indicators
 setw -g window-status-current-bg colour7
@@ -76,5 +79,5 @@ setw -g window-status-format ' #I #[fg=colour7]#W#[fg=colour0] #F '
 
 # Messages
 set -g message-attr bold
-set -g message-fg colour15
 set -g message-bg colour8
+set -g message-fg colour15
