--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,9 @@ set -g default-terminal "screen-256color"
 # Renumber windows when one is closed
 set -g renumber-windows on
 
+# Redraw status bar every 10 seconds
+set -g status-interval 10
+
 ## Bindings
 # Remap prefix to C-a
 set -g prefix C-a
