--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,32 +55,23 @@ bind -n M-Down select-pane -D
 
 ## Visuals (Used colours: default, 0, 7, 8, 15)
 # Panes
-set -g pane-border-bg default
-set -g pane-border-fg colour0
-set -g pane-active-border-bg default
-set -g pane-active-border-fg colour7
+set -g pane-border-style bg=default,fg=colour0
+set -g pane-active-border-style bg=default,fg=colour7
 
 # Statusbar
 set -g status-position bottom
 set -g status-justify left
-set -g status-bg default
-set -g status-fg colour8
-set -g status-attr dim
+set -g status-style dim,bg=default,fg=colour8 
 set -g status-left ' '
 set -g status-right '#[bg=default,fg=colour0,bold] %d/%m #[fg=colour7] %H:%M:%S '
 
 # Window indicators
-setw -g window-status-current-bg colour7
-setw -g window-status-current-fg colour0
-setw -g window-status-current-attr bold
+setw -g window-status-current-style bold,bg=colour7,fg=colour0
 setw -g window-status-current-format ' #I #W #F '
 
-setw -g window-status-bg default
-setw -g window-status-fg colour0
-setw -g window-status-attr bold
+setw -g window-status-style bold,bg=default,fg=colour0
 setw -g window-status-format ' #I #[fg=colour7]#W#[fg=colour0] #F '
 
 # Messages
-set -g message-attr bold
-set -g message-bg colour8
-set -g message-fg colour15
+set -g message-style bold,bg=colour8,fg=colour15
+
