Trying to move all my editing to vim

--- a/gnome-terminal.conf
+++ b/gnome-terminal.conf
@@ -4,6 +4,7 @@ audible-bell=false
 background-color='rgb(34,35,38)'
 background-transparency-percent=50
 bold-color-same-as-fg=true
+bold-is-bright=false
 cursor-background-color='rgb(70,81,89)'
 cursor-colors-set=true
 cursor-foreground-color='rgb(70,81,89)'
