Change pane select bindings

--- a/tmux.conf
+++ b/tmux.conf
@@ -27,6 +27,9 @@ set -g prefix C-a
 bind C-a send-prefix
 unbind C-b
 
+# Fix esc delay
+set -s escape-time 0
+
 # Reload config
 bind r source-file ~/.tmux.conf
 
@@ -48,10 +51,10 @@ unbind '"'
 unbind %
 
 # Switch panes using Alt-arrow (no prefix)
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
 
 ## Visuals (Used colours: default, 0, 7, 8, 15)
 # Panes
