Add local config compatibility

--- a/tmux.conf
+++ b/tmux.conf
@@ -78,3 +78,5 @@ setw -g window-status-format ' #I #[fg=colour7]#W#[fg=colour0] #F '
 # Messages
 set -g message-style bold,bg=colour8,fg=colour15
 
+# Local config
+if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
