Add GNOME keybindings load/dump

--- a/.install.conf.yaml
+++ b/.install.conf.yaml
@@ -19,4 +19,5 @@
 
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
+    - [./bin/gnome-keys load, Loading GNOME keybindings]
 
