Add cloning wallpapers to install script

--- a/.install.conf.yaml
+++ b/.install.conf.yaml
@@ -4,6 +4,9 @@
 
 - clean: ['~']
 
+- shell:
+  - [./bin/get-wallpapers, Getting wallpapers]
+
 - link:
     ~/.config/alacritty/alacritty.yml: alacritty.yml
     ~/.gitconfig:
