Start using global gitignore; Add nerdcommenter

--- a/.install.conf.yaml
+++ b/.install.conf.yaml
@@ -10,6 +10,7 @@
 - link:
     ~/.config/alacritty/alacritty.yml: alacritty.yml
     ~/.gitconfig:
+    ~/.gitignore_global:
     ~/.oh-my-zsh/custom/themes/sorbet.zsh-theme: oh-my-zsh/custom/themes/sorbet.zsh-theme
     ~/.tmux.conf:
     ~/.vim:
