--- a/tmux.conf
+++ b/tmux.conf
@@ -45,7 +45,7 @@ bind -n M-8 select-window -t :=8
 bind -n M-9 select-window -t :=9
 
 # Split panes using \ and - (new panes are in the same dir as parent)
-bind \ split-window -h -c "#{pane_current_path}"
+bind \\ split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
