Add temporary workspace shortcut; Minor zshrc update

--- a/keys.conf
+++ b/keys.conf
@@ -18,7 +18,7 @@ close=['<Super>q']
 move-to-workspace-1=['<Shift><Super>exclam']
 move-to-workspace-2=['<Shift><Super>at']
 move-to-workspace-3=['<Shift><Super>numbersign']
-move-to-workspace-4=['<Shift><Super>dollar']
+move-to-workspace-4=['<Shift><Super>4']
 switch-applications=@as []
 switch-applications-backward=@as []
 switch-input-source=@as []
