--- a/keys.conf
+++ b/keys.conf
@@ -19,6 +19,7 @@ move-to-workspace-1=['<Shift><Super>exclam']
 move-to-workspace-2=['<Shift><Super>at']
 move-to-workspace-3=['<Shift><Super>numbersign']
 move-to-workspace-4=['<Shift><Super>4']
+move-to-workspace-5=['<Shift><Super>5']
 switch-applications=@as []
 switch-applications-backward=@as []
 switch-input-source=@as []
@@ -27,6 +28,7 @@ switch-to-workspace-1=['<Super>1']
 switch-to-workspace-2=['<Super>2']
 switch-to-workspace-3=['<Super>3']
 switch-to-workspace-4=['<Super>4']
+switch-to-workspace-5=['<Super>5']
 switch-to-workspace-down=@as []
 switch-to-workspace-last=@as []
 switch-to-workspace-up=@as []
