Fix adwaita paths; Update gitignore + keys; Add docker autocompletion

--- a/keys.conf
+++ b/keys.conf
@@ -15,13 +15,18 @@ activate-window-menu=['<Super>space']
 begin-move=['<Super>m']
 begin-resize=['<Super>r']
 close=['<Super>q']
+cycle-group=@as []
+cycle-group-backward=@as []
 move-to-workspace-1=['<Shift><Super>exclam']
 move-to-workspace-2=['<Shift><Super>at']
 move-to-workspace-3=['<Shift><Super>numbersign']
 move-to-workspace-4=['<Shift><Super>4']
 move-to-workspace-5=['<Shift><Super>5']
+move-to-workspace-last=@as []
 switch-applications=@as []
 switch-applications-backward=@as []
+switch-group=@as []
+switch-group-backward=@as []
 switch-input-source=@as []
 switch-input-source-backward=@as []
 switch-to-workspace-1=['<Super>1']
@@ -31,6 +36,8 @@ switch-to-workspace-4=['<Super>4']
 switch-to-workspace-5=['<Super>5']
 switch-to-workspace-down=@as []
 switch-to-workspace-last=@as []
+switch-to-workspace-left=@as []
+switch-to-workspace-right=@as []
 switch-to-workspace-up=@as []
 switch-windows=['<Alt>Tab']
 switch-windows-backward=['<Shift><Alt>Tab']
@@ -46,6 +53,7 @@ magnifier-zoom-out=@as []
 screenreader=@as []
 screensaver=['<Super>l']
 search=['']
+terminal=@as []
 www=['']
 
 [mutter/wayland/keybindings]
