I hope this is right

--- a/keys.conf
+++ b/keys.conf
@@ -42,6 +42,14 @@ switch-to-workspace-up=@as []
 switch-windows=['<Alt>Tab']
 switch-windows-backward=['<Shift><Alt>Tab']
 
+[dektop/wm/preferences]
+
+[mutter]
+dynamic-workspaces=false
+
+[wayland/keybindings]
+restore-shortcuts=@as []
+
 [settings-daemon/plugins/media-keys]
 calculator=['']
 control-center=['']
