--- a/alacritty.yml
+++ b/alacritty.yml
@@ -27,7 +27,7 @@ bell:
   # When set to `true`, selected text will be copied to the primary clipboard.
   #save_to_clipboard: false
 
-# Send ESC (\x1b) before characters 5hen alt is pressed.
+# Send ESC (\x1b) before characters when alt is pressed.
 #alt_send_esc: true
 
 key_bindings:
@@ -40,7 +40,7 @@ key_bindings:
 colors:
   # Default colors
   primary:
-    background: '#1c1d1f'
+    background: '#161719'
     foreground: '#dedfd5'
 
   # Colors the cursor will use if `custom_cursor_colors` is true
