--- a/tmux.conf
+++ b/tmux.conf
@@ -66,14 +66,14 @@ set -g status-position bottom
 set -g status-justify left
 set -g status-style dim,bg=default,fg=colour8 
 set -g status-left ' '
-set -g status-right '#[bg=default,fg=colour0,bold] %d/%m #[fg=colour7] %H:%M:%S '
+set -g status-right '#[bg=default,bold] %d/%m  %H:%M:%S '
 
 # Window indicators
 setw -g window-status-current-style bold,bg=colour7,fg=colour0
 setw -g window-status-current-format ' #I #W #F '
 
 setw -g window-status-style bold,bg=default,fg=colour0
-setw -g window-status-format ' #I #[fg=colour7]#W#[fg=colour0] #F '
+setw -g window-status-format ' #I #W #F '
 
 # Messages
 set -g message-style bold,bg=colour8,fg=colour15
