--- a/tmux.conf
+++ b/tmux.conf
@@ -30,8 +30,8 @@ unbind C-b
 # Fix esc delay
 set -s escape-time 0
 
-# Reload config
-bind r source-file ~/.tmux.conf
+# Reload config (\; instead of plain ; so that the display-message does not run on startup)
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded"
 
 # Select windows with M-(number) as in gnome-terminal tabs
 bind -n M-1 select-window -t :=1
@@ -56,6 +56,11 @@ bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
 
+# Moving panes between windows
+bind j command-prompt -p "join pane from:" "join-pane -s '%%'"
+bind s command-prompt -p "send pane to:" "join-pane -t '%%'"
+
+
 ## Visuals (Used colours: default, 0, 7, 8, 15)
 # Panes
 set -g pane-border-style bg=default,fg=colour0
@@ -66,7 +71,7 @@ set -g status-position bottom
 set -g status-justify left
 set -g status-style dim,bg=default,fg=colour8 
 set -g status-left ' '
-set -g status-right '#[bg=default,fg=colour0,bold] %d/%m #[fg=colour7] %H:%M:%S '
+set -g status-right '#[bg=default,fg=colour7] %d/%m #[bold]%H:%M:%S '
 
 # Window indicators
 setw -g window-status-current-style bold,bg=colour7,fg=colour0
