Resolve TMUX conflicts (#1)

--- a/tmux.conf
+++ b/tmux.conf
@@ -30,8 +30,8 @@ unbind C-b
 # Fix esc delay
 set -s escape-time 0
 
-# Reload config
-bind r source-file ~/.tmux.conf
+# Reload config (\; instead of plain ; so that the display-message does not run on startup)
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded"
 
 # Select windows with M-(number) as in gnome-terminal tabs
 bind -n M-1 select-window -t :=1
@@ -55,6 +55,11 @@ bind -n M-h select-pane -L
 bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
+
+# Moving panes between windows
+bind j command-prompt -p "join pane from:" "join-pane -s '%%'"
+bind s command-prompt -p "send pane to:" "join-pane -t '%%'"
+
 
 ## Visuals (Used colours: default, 0, 7, 8, 15)
 # Panes
