--- a/keys.conf
+++ b/keys.conf
@@ -22,6 +22,7 @@ move-to-workspace-2=['<Shift><Super>at']
 move-to-workspace-3=['<Shift><Super>numbersign']
 move-to-workspace-4=['<Shift><Super>4']
 move-to-workspace-5=['<Shift><Super>5']
+move-to-workspace-6=['<Shift><Super>6']
 move-to-workspace-last=@as []
 switch-applications=@as []
 switch-applications-backward=@as []
@@ -34,6 +35,7 @@ switch-to-workspace-2=['<Super>2']
 switch-to-workspace-3=['<Super>3']
 switch-to-workspace-4=['<Super>4']
 switch-to-workspace-5=['<Super>5']
+switch-to-workspace-6=['<Super>6']
 switch-to-workspace-down=@as []
 switch-to-workspace-last=@as []
 switch-to-workspace-left=@as []
