--- a/.gitmodules
+++ b/.gitmodules
@@ -27,3 +27,6 @@
 [submodule "alacritty-theme"]
 	path = alacritty-theme
 	url = https://github.com/alacritty/alacritty-theme
+[submodule "dist/Boston-Icons"]
+	path = dist/Boston-Icons
+	url = https://github.com/thecheis/Boston-Icons
